Fix ToC layout on small screens

--- a/index.screen.css
+++ b/index.screen.css
@@ -4,6 +4,10 @@ body {
 	background-image: repeating-radial-gradient(circle at 50% 0, transparent 0, #d7d6d0 2em), repeating-linear-gradient(#cbc2bb55, #cbc2bb);
 }
 
+#content {
+	font-size: clamp(1rem, 1.7vw, 1.5rem);
+}
+
 h1 {
 	padding: 2rem 2rem 1rem;
 	margin: 0 auto 3rem;
@@ -25,7 +29,6 @@ h1 {
 	border-radius: 0.2rem;
 	background: var(--dirty-bg);
 	box-shadow: inset 0 0 1em #54504263, 0 1em 2em #0003;
-	font-size: clamp(1rem, 1.7vw, 1.5rem);
 }
 
 h2 {
@@ -46,6 +49,17 @@ h3 {
 	margin-left: 1em;
 	background: #fefcf6;
 	box-shadow: 0 0.2em 0.4em #0002;
+}
+
+@media (width < 50em) {
+	#table-of-contents {
+		float: none;
+		padding: 0;
+		margin-left: 0;
+		margin-bottom : 3em;
+		background: transparent;
+		box-shadow: none;
+	}
 }
 
 #table-of-contents h2 {
